tests/dataset/job/compiler/c/q8.error
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c: In function ‘test_Q8_returns_the_pseudonym_and_movie_title_for_Japanese_dubbing’:
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:315:23: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  315 |           .len != tmp1.len) {
      |                       ^
      |                       ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:325:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  325 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:359:31: warning: implicit declaration of function ‘eligible_item_list_t_create’ [-Wimplicit-function-declaration]
  359 |   eligible_item_list_t tmp4 = eligible_item_list_t_create(
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:360:15: error: ‘(aka_name_t *)&aka_name’ is a pointer; did you mean to use ‘->’?
  360 |       aka_name.len * name.len * cast_info.len * title.len *
      |               ^
      |               ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:360:26: error: ‘(name_t *)&name’ is a pointer; did you mean to use ‘->’?
  360 |       aka_name.len * name.len * cast_info.len * title.len *
      |                          ^
      |                          ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:360:42: error: ‘(cast_info_t *)&cast_info’ is a pointer; did you mean to use ‘->’?
  360 |       aka_name.len * name.len * cast_info.len * title.len *
      |                                          ^
      |                                          ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:360:54: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  360 |       aka_name.len * name.len * cast_info.len * title.len *
      |                                                      ^
      |                                                      ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:361:22: error: ‘(movie_companie_t *)&movie_companies’ is a pointer; did you mean to use ‘->’?
  361 |       movie_companies.len * company_name.len * role_type.len);
      |                      ^
      |                      ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:361:41: error: ‘(company_name_t *)&company_name’ is a pointer; did you mean to use ‘->’?
  361 |       movie_companies.len * company_name.len * role_type.len);
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:361:57: error: ‘(role_type_t *)&role_type’ is a pointer; did you mean to use ‘->’?
  361 |       movie_companies.len * company_name.len * role_type.len);
      |                                                         ^
      |                                                         ->
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:397:41: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  397 |                       contains_string(mc.note, "(Japan)") &&
      |                                       ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:398:44: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  398 |                       ((!contains_string(mc.note, "(USA)"))) &&
      |                                          ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:399:41: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  399 |                       contains_string(n1.name, "Yo") &&
      |                                       ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:400:44: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  400 |                       ((!contains_string(n1.name, "Yu"))) &&
      |                                          ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:416:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  416 |   int tmp13 = int_create(eligible.len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:420:10: error: request for member ‘data’ in something not a structure or union
  420 |     tmp13.data[tmp14] = x.pseudonym;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:423:8: error: request for member ‘len’ in something not a structure or union
  423 |   tmp13.len = tmp14;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:428:10: error: request for member ‘data’ in something not a structure or union
  428 |     tmp16.data[tmp17] = x.movie_title;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:431:8: error: request for member ‘len’ in something not a structure or union
  431 |   tmp16.len = tmp17;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:432:68: error: incompatible type for argument 1 of ‘_min_string’
  432 |   result_t result[] = {(result_t){.actress_pseudonym = _min_string(tmp13),
      |                                                                    ^~~~~
      |                                                                    |
      |                                                                    int
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:433:72: error: incompatible type for argument 1 of ‘_min_string’
  433 |                                   .japanese_movie_dubbed = _min_string(tmp16)}};
      |                                                                        ^~~~~
      |                                                                        |
      |                                                                        int
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:443:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  443 |     _json_string(it.actress_pseudonym);
      |                  ~~^~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:447:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  447 |     _json_string(it.japanese_movie_dubbed);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:452:7: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  452 |       result;
      |       ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:454:13: error: request for member ‘data’ in something not a structure or union
  454 |   free(tmp13.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq83850686028/001/prog.c:455:13: error: request for member ‘data’ in something not a structure or union
  455 |   free(tmp16.data);
      |             ^
